samples/_failures_safe/1761785862_d52d36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30565e06.c: In function ‘main’:
./samples/SAFE/__tmp_30565e06.c:133:17: error: expected declaration or statement at end of input
  133 |                 printf("Invalid matrix input\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_30565e06.c:133:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30565e06.c:133:17: error: expected declaration or statement at end of input
